# aby3

./: .gitignore  CMakeLists.txt  README.md  aby3.sln  build.py  com-psi.sln  copySourceToLinux.ps1
.github/workflows/: build-test.yml
aby3/: CMakeLists.txt  aby3.filters  aby3.vcxproj
aby3-DB/: CMakeLists.txt  ComPsiServer.cpp  ComPsiServer.h  DBServer.cpp  DBServer.h  LowMC.h  OblvPermutation.cpp  OblvPermutation.h  OblvSwitchNet.cpp  OblvSwitchNet.h  Table.cpp  Table.h  aby3-DB.vcxproj  com-psi.vcxproj.filters
aby3-DB_tests/: ComPsiServerTests.cpp  ComPsiServerTests.h  DBServerTests.cpp  DBServerTests.h  LowMC.h  PermutaitonTests.cpp  PermutaitonTests.h  UnitTests.cpp  UnitTests.h  aby3-DB_tests.vcxproj  lowMC.cpp
aby3-DT/: CMakeLists.txt  Common.cpp  Common.h  FullDecisionTree.cpp  FullDecisionTree.h  SparseDecisionTree.cpp  SparseDecisionTree.h  aby3-DT.vcxproj  aby3-DT.vcxproj.filters  benchmark.cpp  benchmark.h  tests.cpp  tests.h
aby3-ML/: CMakeLists.txt  LinearModelGen.cpp  LinearModelGen.h  NeuralModelGen.cpp  NeuralModelGen.h  PlainML.cpp  PlainML.h  PlainRuntime.cpp  PlainRuntime.h  Regression.h  aby3-ML.vcxproj  aby3-ML.vcxproj.filters  aby3ML.cpp  aby3ML.h  main-linear.cpp  main-linear.h  main-logistic.cpp  main-logistic.h  main-pred.cpp  main-pred.h
aby3/Circuit/: BetaCircuit.cpp  BetaCircuit.h  BetaLibrary.cpp  BetaLibrary.h  CircuitLibrary.cpp  CircuitLibrary.h  Garble.cpp  Garble.h  Gate.h
aby3/Common/: Defines.h  Task.h
aby3/Engines/: LynxEngine.cpp  LynxEngine.h  PlainEngine.cpp
aby3/Engines/Lynx/: LynxBinaryEngine.cpp  LynxBinaryEngine.h  LynxDefines.h  LynxEncryptor.h  LynxPiecewise.cpp  LynxPiecewise.h
aby3/Engines/sh3/: Sh3BinaryEvaluator.cpp  Sh3BinaryEvaluator.h  Sh3Converter.cpp  Sh3Converter.h  Sh3Defines.h  Sh3Encryptor.cpp  Sh3Encryptor.h  Sh3Evaluator.cpp  Sh3Evaluator.h  Sh3FixedPoint.cpp  Sh3FixedPoint.h  Sh3Piecewise.cpp  Sh3Piecewise.h  Sh3Runtime.cpp  Sh3Runtime.h  Sh3ShareGen.h  Sh3Types.cpp  Sh3Types.h
aby3/Lagecy/: LynxEngine.cpp  LynxEngine.h  PlainEngine.cpp  PlainEngine.h
aby3/Lagecy/Lynx/: LynxBinaryEngine.h  LynxPiecewise.cpp  LynxPiecewise.h
aby3/OT/: SharedOT.cpp  SharedOT.h
aby3/sh3/: Sh3BinaryEvaluator.cpp  Sh3BinaryEvaluator.h  Sh3Converter.cpp  Sh3Converter.h  Sh3Encryptor.cpp  Sh3Encryptor.h  Sh3Evaluator.cpp  Sh3Evaluator.h  Sh3FixedPoint.cpp  Sh3FixedPoint.h  Sh3Piecewise.cpp  Sh3Piecewise.h  Sh3Runtime.cpp  Sh3Runtime.h  Sh3ShareGen.h  Sh3Types.cpp  Sh3Types.h
aby3_tests/: CMakeLists.txt  CircuitTests.cpp  CircuitTests.h  LynxTests.cpp  LynxTests.h  Sh3BinaryEvaluatorTests.cpp  Sh3BinaryEvaluatorTests.h  Sh3ConverterTests.cpp  Sh3ConverterTests.h  Sh3EncryptorTests.cpp  Sh3EncryptorTests.h  Sh3EvaluatorTests.cpp  Sh3EvaluatorTests.h  Sh3PiecewiseTests.cpp  Sh3PiecewiseTests.h  Sh3RuntimeTests.cpp  Sh3RuntimeTests.h  SharedOTTests.cpp  SharedOTTests.h  aby3_tests.cpp  aby3_tests.h  aby3_tests.vcxproj  aby3_tests.vcxproj.filters  testUtils.cpp  testUtils.h
com-psi/: ComPsiServer.cpp  ComPsiServer.h  LowMC.h  OblvPermutation.cpp  OblvPermutation.h  OblvSwitchNet.cpp  OblvSwitchNet.h  Table.cpp  Table.h  com-psi.vcxproj  com-psi.vcxproj.filters
com-psi_tests/: CMakeLists.txt  ComPsiServerTests.cpp  ComPsiServerTests.h  LowMC.h  PermutaitonTests.cpp  PermutaitonTests.h  UnitTests.cpp  UnitTests.h  com-psi_tests.vcxproj  com-psi_tests.vcxproj.filters  lowMC.cpp
frontend/: CMakeLists.txt  aby3-DB-main.cpp  aby3-DB-main.h  aby3Tutorial.cpp  bench.cpp  bench.h  bug.cpp  eric.cpp  eric.h  frontend.args.json  frontend.vcxproj  frontend.vcxproj.filters  main.cpp
tex/: .gitignore  Makefile  appendix.tex  bib.bib  construction.tex  diff.tex  headers.tex  ideal-fig-switch.tex  implementation.tex  intro.tex  main-flat.tex  main.tex  ppjoin.html  prelims.tex  proofs.tex  prot-fig-dup.tex  prot-fig-perm.tex  prot-fig-shared.tex  prot-fig-switch.tex  related.tex  security.tex  threatlog.tex  todo.txt  voter.tex
tex/cryptobib/: abbrev0.bib  abbrev1.bib  abbrev2.bib  abbrev3.bib  changes.txt
tex/ppjoin_files/: watch.js
